--- a/templates/amt/hovedvedtak-standard.hbs
+++ b/templates/amt/hovedvedtak-standard.hbs
@@ -1,4 +1,3 @@
-<!--Skal slettes og isteden bruke hovedvedtak-individuell-oppfolging-->
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -17,25 +16,25 @@
     <div id="footer">
         <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
     </div>
-    {{> amt/sections/header}}
+    {{> sections/header}}
     <main>
-        {{> amt/sections/overskrift-med-ingress}}
+        {{> sections/overskrift-med-ingress}}
 
-        {{> amt/sections/innhold}}
+        {{> sections/innhold}}
 
-        {{> amt/sections/bakgrunnsinfo}}
+        {{> sections/bakgrunnsinfo}}
 
-        {{> amt/sections/deltakelsesmengde}}
+        {{> sections/deltakelsesmengde}}
 
-        {{> amt/sections/dette-er-et-vedtak}}
+        {{> sections/dette-er-et-vedtak}}
 
-        {{> amt/sections/rett-til-klage}}
+        {{> sections/rett-til-klage}}
 
-        {{> amt/sections/dette-deles-med-arrangor}}
+        {{> sections/dette-deles-med-arrangor}}
 
-        {{> amt/sections/sporsmal}}
+        {{> sections/sporsmal}}
 
-        {{> amt/sections/avsender}}
+        {{> sections/avsender}}
     </main>
 </body>
 </html>
