--- a/templates/sections/klagerett.hbs
+++ b/templates/sections/klagerett.hbs
@@ -1,7 +1,7 @@
 {{#if deltakerliste.harKlagerett}}
-    {{> amt/sections/rett-til-klage}}
+    {{> sections/rett-til-klage}}
 {{/if}}
 
 {{#unless deltakerliste.harKlagerett}}
-    {{> amt/sections/unntak-fra-klagerett}}
+    {{> sections/unntak-fra-klagerett}}
 {{/unless}}
