--- a/templates/amt/hovedvedtak-tildelt-plass-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-tildelt-plass-felles-oppstart.hbs
@@ -16,7 +16,7 @@
     <div id="footer">
         <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
     </div>
-    {{> amt/sections/header}}
+    {{> sections/header}}
     <main>
         <section>
             <h1>{{this.deltakerliste.tittelNavn}}</h1>
@@ -40,20 +40,20 @@
                 </p>
             {{/if}}
 
-            {{> amt/sections/oppmote-sted }}
+            {{> sections/oppmote-sted }}
         </section>
 
-        {{> amt/sections/innhold}}
+        {{> sections/innhold}}
 
-        {{> amt/sections/dette-er-et-vedtak}}
+        {{> sections/dette-er-et-vedtak}}
 
-        {{> amt/sections/klagerett}}
+        {{> sections/klagerett}}
 
-        {{> amt/sections/dette-deles-med-arrangor}}
+        {{> sections/dette-deles-med-arrangor}}
 
-        {{> amt/sections/sporsmal}}
+        {{> sections/sporsmal}}
 
-        {{> amt/sections/avsender}}
+        {{> sections/avsender}}
     </main>
 </body>
 </html>
