--- a/templates/sections/overskrift-med-ingress.hbs
+++ b/templates/sections/overskrift-med-ingress.hbs
@@ -2,11 +2,10 @@
     <h1>{{this.sidetittel}}</h1>
     <p>
         Du er meldt på arbeidsmarkedstiltaket: {{this.ingressnavn}}.
-        {{deltakerliste.arrangor.navn}} avgjør om du tilbys plass. Ved tilbud om plass vil du bli ansatt.
         Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale når du skal begynne.
     </p>
 
-    {{> amt/sections/oppmote-sted }}
+    {{> sections/oppmote-sted }}
 
-    {{> amt/sections/begrunnelse-fra-nav}}
+    {{> sections/begrunnelse-fra-nav}}
 </section>
