Bruker felles innholdskomponent for alle vedtak (#128)
* Bruker felles innholdskomponent for alle hovedvedtak og sletter maler som ikke lengre blir brukt

* Lager ny mal som slår sammen hovedvedtak maler slik at tiltak som alltid har individuell oppfølging, vta og kurs med løpende oppstart+direktegodkjent bruker samme mal
* Det vil fortsatt være forskjeller i den genererte pdfen men disse forskjellene er styrt av input til dokumentet fra amt-distribusjon

* flytter datafiler

--- a/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
+++ b/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
@@ -1,3 +1,4 @@
+<!--Skal slettes og isteden bruke hovedvedtak-individuell-oppfolging-->
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -20,7 +21,7 @@
     <main>
         {{> amt/sections/overskrift-med-ingress}}
 
-        {{> amt/sections/innhold-med-beskrivelsetekst}}
+        {{> amt/sections/innhold}}
 
         {{> amt/sections/dette-er-et-vedtak}}
 
