--- a/templates/amt/hovedvedtak-individuell-oppfolging.hbs
+++ b/templates/amt/hovedvedtak-individuell-oppfolging.hbs
@@ -16,30 +16,30 @@
     <div id="footer">
         <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
     </div>
-    {{> amt/sections/header}}
+    {{> sections/header}}
     <main>
         {{#eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
-            {{> amt/sections/overskrift-med-ingress-vta}}
+            {{> sections/overskrift-med-ingress-vta}}
         {{/eq}}
         {{#not_eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
-            {{> amt/sections/overskrift-med-ingress}}
+            {{> sections/overskrift-med-ingress}}
         {{/not_eq}}
 
-        {{> amt/sections/innhold}}
+        {{> sections/innhold}}
 
-        {{> amt/sections/bakgrunnsinfo}}
+        {{> sections/bakgrunnsinfo}}
 
-        {{> amt/sections/deltakelsesmengde}}
+        {{> sections/deltakelsesmengde}}
 
-        {{> amt/sections/dette-er-et-vedtak}}
+        {{> sections/dette-er-et-vedtak}}
 
-        {{> amt/sections/rett-til-klage}}
+        {{> sections/rett-til-klage}}
 
-        {{> amt/sections/dette-deles-med-arrangor}}
+        {{> sections/dette-deles-med-arrangor}}
 
-        {{> amt/sections/sporsmal}}
+        {{> sections/sporsmal}}
 
-        {{> amt/sections/avsender}}
+        {{> sections/avsender}}
     </main>
 </body>
 </html>
