--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -19,107 +19,19 @@
     {{> amt/sections/header}}
     <main>
         <h1>Endring: {{this.sidetittel}}</h1>
-        {{#eq deltakerliste.oppstart "LOPENDE"}}
+        {{#eq deltakerliste.pameldingstype "DIREKTE_VEDTAK"}}
             <p>Du ble meldt på arbeidsmarkedstiltaket {{this.ingressnavn}} {{iso_to_long_date this.forsteVedtakFattet}}, og deltakelsen er nå endret. Du, arrangør og Nav ser samme informasjon.</p>
         {{/eq}}
-        {{#eq deltakerliste.oppstart "FELLES"}}
+        {{#eq deltakerliste.pameldingstype "TRENGER_GODKJENNING"}}
             <p>Du ble søkt inn på arbeidsmarkedstiltaket: {{this.ingressnavn}} den {{iso_to_long_date this.deltaker.opprettetDato}}, og deltakelsen er nå endret.</p>
         {{/eq}}
         {{#each endringer}}
-            <section>
-                <h2>{{this.tittel}}</h2>
-                {{#if this.gyldigFra}}
-                    <p>Endringen gjelder fra: {{iso_to_nor_date this.gyldigFra}}</p>
-                {{/if}}
-                {{#if this.aarsak}}
-                    <p>Årsak: {{this.aarsak}}</p>
-                {{/if}}
-                {{#if this.endringFraArrangor}}
-                    {{#if this.sluttdatoFraArrangor}}
-                        <p>Forventet sluttdato: {{iso_to_nor_date this.sluttdatoFraArrangor}}</p>
-                    {{/if}}
-                    <p>Endret {{iso_to_nor_date vedtaksdato}} av {{deltakerliste.arrangor.navn}}</p>
-                {{/if}}
-                {{#if this.sluttdato}}
-                    <p>{{this.sluttdato}}</p>
-                {{/if}}
-                {{#if this.begrunnelseFraNav}}
-                    <p>Nav sin begrunnelse: {{this.begrunnelseFraNav}}</p>
-                {{/if}}
-                {{#if this.harDeltatt}}
-                    <p>Har personen deltatt? {{this.harDeltatt}}</p>
-                {{/if}}
-                {{#if this.harFullfort}}
-                    <p>Er kurset fullført? {{this.harFullfort}}</p>
-                {{/if}}
-                {{#if this.vurdering}}
-                    <div class="forslag">
-                        <p><b>Vurdering fra arrangør</b></p>
-                        <p>{{this.vurdering.type}}</p>
-                        {{#if this.vurdering.begrunnelse}}
-                            <p class="fritekst">Begrunnelse: {{this.vurdering.begrunnelse}}</p>
-                        {{/if}}
-                    </div>
-                {{/if}}
-                {{#if this.forslagFraArrangor}}
-                    <div class="forslag">
-                        <p><b>Forslaget sendt  fra arrangør:</b></p>
-                        <p>{{this.forslagFraArrangor.type}}</p>
-                        {{#if this.forslagFraArrangor.aarsak}}
-                            <p>Årsak: {{this.forslagFraArrangor.aarsak}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.harDeltatt}}
-                            <p>Har personen deltatt? {{this.forslagFraArrangor.harDeltatt}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.harFullfort}}
-                            <p>Er kurset fullført? {{this.forslagFraArrangor.harFullfort}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.startdato}}
-                            <p>Ny oppstartsdato: {{iso_to_nor_date this.forslagFraArrangor.startdato}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.sluttdato}}
-                            <p>Ny sluttdato: {{iso_to_nor_date this.forslagFraArrangor.sluttdato}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.deltakelsesmengdeTekst}}
-                            <p>Ny deltakelsesmengde: {{this.forslagFraArrangor.deltakelsesmengdeTekst}}</p>
-                        {{/if}}
-                        {{#if this.forslagFraArrangor.begrunnelseFraArrangor}}
-                            <p class="fritekst">Begrunnelse: {{this.forslagFraArrangor.begrunnelseFraArrangor}}</p>
-                        {{/if}}
-                    </div>
-                {{/if}}
-                {{#if this.bakgrunnsinformasjon}}
-                    <p class="fritekst">{{this.bakgrunnsinformasjon}}</p>
-                {{/if}}
-                {{#if this.innhold.length}}
-                    <p>{{deltakerliste.ledetekst}}</p>
-                    {{#if this.innholdBeskrivelse}}
-                        <br />
-                        <p class="fritekst">{{this.innholdBeskrivelse}}</p>
-                    {{/if}}
-                    {{#unless this.innholdBeskrivelse}}
-                        <ul>
-                            {{#each this.innhold}}
-                            <li class="fritekst">{{this}}</li>
-                            {{/each}}
-                        </ul>
-                    {{/unless}}
-                {{/if}}
-            </section>
+            {{> amt/sections/endring/endring-listeelement}}
         {{/each}}
 
         {{> amt/sections/dette-er-et-vedtak}}
 
-        {{#if deltakerliste.klagerett}}
-            <section>
-                <h2>Du har rett til å klage</h2>
-                <p>Du kan klage hvis du er uenig i endringer på deltakelsen. Fristen for å klage er seks uker etter du mottok informasjonen. Les mer om retten til å klage på <a href="https://www.nav.no/klage">nav.no/klage</a></p>
-            </section>
-        {{/if}}
-
-        {{#unless deltakerliste.klagerett}}
-            {{> amt/sections/unntak-fra-klagerett}}
-        {{/unless}}
+        {{> amt/sections/klagerett}}
 
         {{> amt/sections/sporsmal}}
 
