--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -25,14 +25,17 @@
            <p>
                Hvis det blir en ledig plass, vil Nav eller arrangøren ta kontakt med deg for å avtale når du skal begynne.
 
-                {{#if this.deltakerliste.startdato}}
-                    <br />
-                    <br />
-                    Ordinær oppstart er {{iso_to_long_date this.deltakerliste.startdato}}, men ledige plasser kan dukke opp etter dette. Ved ledig plass ber vi om at du er tilgjengelig på kort varsel.
-                    {{#if this.deltakerliste.sluttdato}}
-                        Kurset slutter {{iso_to_long_date this.deltakerliste.sluttdato}}.
+                {{#eq this.deltakerliste.oppstartstype "FELLES"}}
+                    {{#if this.deltakerliste.startdato}}
+                        <br />
+                        <br />
+                        Ordinær oppstart er {{iso_to_long_date this.deltakerliste.startdato}}, men ledige plasser kan dukke opp etter dette. Ved ledig plass ber vi om at du er tilgjengelig på kort varsel.
+                        {{#if this.deltakerliste.sluttdato}}
+                            Kurset slutter {{iso_to_long_date this.deltakerliste.sluttdato}}.
+                        {{/if}}
                     {{/if}}
-                {{/if}}
+                {{/eq}}
+
 
                {{#if this.deltakerliste.oppmoteSted}}
                    <br />
