Justerer innsøkingsbrev til å sjekke oppstartstype og trekker ut oppmøtested i egen mal

--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -30,9 +30,18 @@
 
         <section>
             <h2>Om kurset</h2>
-            <p>
-                Når det nærmer seg oppstart av kurset, vil Nav gjøre en vurdering av om du oppfyller kravene for å delta. Du får svar på søknaden etter dette. Hvis du oppfyller kravene, vil du bli tildelt en plass eller satt på venteliste. Dersom kravene til kurset ikke er oppfylt, vil du få avslag på søknaden.
-            </p>
+            {{#eq deltakerliste.oppstartstype "LOPENDE"}}
+                <p>
+                    Nav vurderer søknaden din, og du får beskjed om resultatet.
+                </p>
+            {{/eq}}
+
+            {{#eq deltakerliste.oppstartstype "FELLES"}}
+                <p>
+                    Når det nærmer seg oppstart av kurset, vil Nav gjøre en vurdering av om du oppfyller kravene for å delta. Du får svar på søknaden etter dette. Hvis du oppfyller kravene, vil du bli tildelt en plass eller satt på venteliste. Dersom kravene til kurset ikke er oppfylt, vil du få avslag på søknaden.
+                </p>
+            {{/eq}}
+
             {{#not_eq deltakerliste.tiltakskode "JOBBKLUBB"}}
                 <br/>
                 <p>
@@ -40,24 +49,11 @@
                 </p>
             {{/not_eq}}
 
-            {{#if deltakerliste.startdato}}
-                <br/>
-                <p>
-                    {{#if deltakerliste.sluttdato}}
-                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}, og slutter {{iso_to_long_date deltakerliste.sluttdato}}.
-                    {{/if}}
-                    {{#unless deltakerliste.sluttdato}}
-                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}.
-                    {{/unless}}
-                </p>
-            {{/if}}
+            {{#eq deltakerliste.oppstartstype "FELLES"}}
+                {{> amt/sections/kurs-oppstartsdato }}
+            {{/eq}}
 
-            {{#if deltakerliste.oppmoteSted}}
-                <br/>
-                <p>
-                    Hvis du får plass skal du møte opp her: {{deltakerliste.oppmoteSted}}.
-                </p>
-            {{/if}}
+            {{> amt/sections/oppmote-sted }}
         </section>
 
         {{> amt/sections/dette-deles-med-arrangor}}
