--- a/templates/amt/sections/oppmote-sted.hbs
+++ b/templates/amt/sections/oppmote-sted.hbs
@@ -1,6 +1,6 @@
 {{#if deltakerliste.oppmoteSted}}
     <br/>
     <p>
-        Du kan møte opp her: {{deltakerliste.oppmoteSted}}.
+        Oppmøtested: {{deltakerliste.oppmoteSted}}.
     </p>
 {{/if}}
