--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -37,11 +37,7 @@
                 {{/eq}}
 
 
-               {{#if this.deltakerliste.oppmoteSted}}
-                   <br />
-                   <br />
-                   Hvis du får plass skal du møte opp her: {{this.deltakerliste.oppmoteSted}}.
-               {{/if}}
+               {{> amt/sections/oppmote-sted }}
 
                <br />
                <br />
