--- a/templates/amt/hovedvedtak-tildelt-plass-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-tildelt-plass-felles-oppstart.hbs
@@ -29,16 +29,7 @@
         </section>
         <section>
             <h2>Om kurset</h2>
-            {{#if deltakerliste.startdato}}
-                <p>
-                    {{#if deltakerliste.sluttdato}}
-                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}, og slutter {{iso_to_long_date deltakerliste.sluttdato}}.
-                    {{/if}}
-                    {{#unless deltakerliste.sluttdato}}
-                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}.
-                    {{/unless}}
-                </p>
-            {{/if}}
+            {{> amt/sections/kurs-oppstartsdato }}
 
             {{> amt/sections/oppmote-sted }}
         </section>
