Lagt til margin over/under "Hvis du ikke får plass, vil søknaden avslås."

--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -57,6 +57,14 @@
     .fritekst {
         white-space: pre-wrap;
     }
+    .margins-1-rem { /* burde kanskje vært default for p */
+        margin: 1rem 0;
+    }
+    .sidebilde {
+        float: right;
+        padding-top: 1rem;
+    }
+    .sidebilde img
     p {
         padding: 0;
         margin: 0;
