--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -13,33 +13,36 @@
 
 </head>
 <body>
-    <div id="footer">
-        <span class="sidetall">Side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
-    </div>
-    {{> sections/header}}
-    <main>
-        <h1>Endring: {{this.deltakerliste.tittelNavn}}</h1>
-       <p>Du ble søkt inn på arbeidsmarkedstiltaket: {{this.deltakerliste.ingressNavn}} den {{iso_to_long_date this.deltaker.opprettetDato}}, og deltakelsen er nå endret. </p>
-       <section>
-           <h2>Du er satt på venteliste</h2>
-           <p>
-               Hvis det blir en ledig plass, vil Nav eller arrangøren ta kontakt med deg for å avtale når du skal begynne.
-           </p>
+<div id="footer">
+    <span class="sidetall">Side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
+</div>
+{{> sections/header}}
+<main>
+    <h1>Endring: {{this.deltakerliste.tittelNavn}}</h1>
+    <p>Du ble søkt inn på arbeidsmarkedstiltaket: {{this.deltakerliste.ingressNavn}} den {{iso_to_long_date
+            this.deltaker.opprettetDato}}, og deltakelsen er nå endret. </p>
+    <section>
+        <h2>Du er satt på venteliste</h2>
+        <p>
+            Hvis det blir en ledig plass, vil Nav eller arrangøren ta kontakt med deg for å avtale når du skal begynne.
+        </p>
 
-                {{#eq this.deltakerliste.oppstartstype "FELLES"}}
-                    {{> sections/kurs-oppstartsdato }}
-                    <br />
-                    <p>Ledige plasser kan dukke opp etter den vanlige oppstartsdatoen.  Hvis det blir en ledig plass ber vi om at du er tilgjengelig på kort varsel.</p>
-                {{/eq}}
+        {{#eq this.deltakerliste.oppstartstype "FELLES"}}
+            {{> sections/kurs-oppstartsdato }}
+            <br/>
+            <p>Ledige plasser kan dukke opp etter den vanlige oppstartsdatoen. Hvis det blir en ledig plass ber vi om at
+                du er tilgjengelig på kort varsel.</p>
+        {{/eq}}
 
-               {{> sections/oppmote-sted }}
+        {{> sections/oppmote-sted }}
 
-               <p>Hvis du ikke får plass, vil søknaden avslås.</p>
+        <p class="margins-1-rem">
+            Hvis du ikke får plass, vil søknaden avslås.
+        </p>
+    </section>
+    {{> sections/sporsmal}}
 
-        </section>
-        {{> sections/sporsmal}}
-
-        {{> sections/avsender}}
-    </main>
+    {{> sections/avsender}}
+</main>
 </body>
 </html>
