Lagt til margin over/under "Hvis du ikke får plass, vil søknaden avslås." (#135)

--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -57,6 +57,9 @@
     .fritekst {
         white-space: pre-wrap;
     }
+    .margins-1-rem { /* burde kanskje vært default for p */
+        margin: 1rem 0;
+    }
     p {
         padding: 0;
         margin: 0;
