Bygget ut linjeskift med CSS-klasse hvor mulig

--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -43,8 +43,7 @@
             {{/eq}}
 
             {{#not_eq deltakerliste.tiltakskode "JOBBKLUBB"}}
-                <br/>
-                <p>
+                <p class="margins-1-rem">
                     For å avgjøre hvem som skal få plass, kan Nav be om hjelp til vurdering fra arrangøren av kurset. Arrangør eller Nav vil kontakte deg hvis det er behov for et møte.
                 </p>
             {{/not_eq}}
