--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -29,9 +29,10 @@
 
         {{#eq this.deltakerliste.oppstartstype "FELLES"}}
             {{> sections/kurs-oppstartsdato }}
-            <br/>
-            <p>Ledige plasser kan dukke opp etter den vanlige oppstartsdatoen. Hvis det blir en ledig plass ber vi om at
-                du er tilgjengelig på kort varsel.</p>
+            <p class="margins-1-rem">
+                Ledige plasser kan dukke opp etter den vanlige oppstartsdatoen. Hvis det blir en ledig plass ber vi om at
+                du er tilgjengelig på kort varsel.
+            </p>
         {{/eq}}
 
         {{> sections/oppmote-sted }}
