--- a/templates/sections/oppmote-sted.hbs
+++ b/templates/sections/oppmote-sted.hbs
@@ -1,6 +1,5 @@
 {{#if deltakerliste.oppmoteSted}}
-    <br/>
-    <p>
+    <p class="margins-1-rem">
         Oppmøtested: {{deltakerliste.oppmoteSted}}.
     </p>
 {{/if}}
